[Bug #157496958] fix banner anomaly on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -660,15 +660,15 @@
     }
   }
   @media only screen and (max-width: 62em) {
-    #hero .btn {
+    .hero .btn {
       padding: 10px;
     }
-    #hero {
+    .hero {
       min-height: 560px;
     }
   }
   @media only screen and (min-width: 62em) {
-    #hero {
+    .hero {
       padding-top: 60px;
     }
   }
